compiler-core/src/type_/snapshots/gleam_core__type___tests__erlang_targeted_function_cant_contain_javascript_only_function.snap
---
source: compiler-core/src/type_/tests.rs
expression: "@target(erlang)\npub fn erlang_only() -> Int {\n  javascript_only()\n}\n\n@external(javascript, \"foo\", \"bar\")\npub fn javascript_only() -> Int\n    "
---
error: Unsupported target
  ┌─ /src/one/two.gleam:3:3
  │
3 │   javascript_only()
  │   ^^^^^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

